Improve index.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
 <html>
 <head>
-<title>Mark Waite on mark-pc1</title>
+<title>Mark Waite public_html</title>
 
 <style>
 h2 { text-align: center; }
@@ -10,7 +10,7 @@ h2 { text-align: center; }
 </head>
 
 <body>
-<h1>Mark Waite on mark-pc1</h1>
+<h1>Mark Waite's public_html</h1>
 
 This is a web page created by Mark Waite on mark-pc1, a Ubuntu 14.04
 computer installed in August 2014.
